
[build-system]
requires = ["flit_core >=3.2, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "paradigm-flood"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    'checkthechain >= 0.3.9, <0.4.0',
    'ipykernel > 6, <7',
    'ipython_genutils > 0.1, <1',
    'matplotlib >= 3.7.1, <4',
    'nbconvert > 6, <7',
    'nbformat >= 5.8.0, <6',
    'numpy >=1.19.0, <1.25',
    'orjson >=3.0.0, < 4',
    'paradigm-data-portal >= 0.2.2, <0.3',
    'polars >= 0.17',
    'requests >=2.20.0, <3',
    'toolcli >=0.6.16, <0.7',
    'toolplot >= 0.3.4, <0.4',
    'toolstr >=0.9.7, <0.10',
    'tqdm >=4.65.0, <5',
    'typing-extensions >=4.2.0, <5',
]

[project.optional-dependencies]
test = [
    'mypy ==1.2.0',
    'mypy_extensions >= 1.0.0, <1.1.0',
    'pytest >=6, <7',
    'types-tqdm >= 4.65.0.1, <5',
]

[project.scripts]
flood = "flood.cli.cli_run:run_cli"

[tool.flit.module]
name = "flood"

[tool.mypy]
python_version = "3.9"
strict = true
implicit_reexport = true
files = ["flood"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = 'auto'

[tool.black]
line-length = 80
skip-string-normalization = true
target-version = ['py37']

[tool.ruff]
line-length = 80
ignore = ["F403"]

